fix: set light color for team members heading in dark mode

--- a/src/app/features/admin/admin-team/edit-team/edit-team.scss
+++ b/src/app/features/admin/admin-team/edit-team/edit-team.scss
@@ -9,7 +9,7 @@ h2{
   justify-content: center;
   align-items: center;
   height: 100vh; /* Full viewport height */
-  background-color: #f5f7fa;
+  background-color: #f5f7fa00;
   padding: 1rem;
 }
 
