--- a/src/app/features/admin/admin-team/view-team/view-team.scss
+++ b/src/app/features/admin/admin-team/view-team/view-team.scss
@@ -9,7 +9,7 @@
 h2{
   text-align: center;
   margin-top: 100px;
-  color: #848383;
+  color: #a5a5a5;
 }
 /* Heading */
 .page-title {
